--- a/week_3/3.8.1 GitHub_Exercise.ipynb
+++ b/week_3/3.8.1 GitHub_Exercise.ipynb
@@ -12,9 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -25,30 +23,30 @@
     }
    ],
    "source": [
-    "groceries = \"apples corn potatoes yams parsley raddish onions beef\"\n",
+    "groceries = \"apples corn potatoes yams parsley raddish onions beef tacos\"\n",
     "print(groceries)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
